// Copyright 2022 Silent Eight Pte. Ltd.

syntax = "proto3";

package silenteight.proto.qco.api.v1;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

option java_package = "com.silenteight.proto.qco.api.v1";
option java_outer_classname = "QcoServiceProto";
option java_multiple_files = true;

service QcoService {
  rpc SubmitSolutionForQcoAnalysis (QcoRecommendation) returns (QcoRecommendation) {
    option (google.api.http) = {
      post: "/v1/qco:submitSolutionForQcoAnalysis"
      body: "overrideSolution"
    };
  }
}

message QcoRecommendation {
  string batch_id = 1 [(google.api.field_behavior) = REQUIRED];
  string alert_id = 2 [(google.api.field_behavior) = REQUIRED];
  string alert_name = 3 [(google.api.field_behavior) = REQUIRED];
  string policy_id = 4 [(google.api.field_behavior) = REQUIRED];
  repeated QcoMatch matches = 5 [(google.api.field_behavior) = REQUIRED];
  bool only_mark = 6 [(google.api.field_behavior) = OPTIONAL];
}

message QcoMatch {
  string match_id = 1 [(google.api.field_behavior) = REQUIRED];
  string match_name = 2 [(google.api.field_behavior) = REQUIRED];
  string recommendation = 3 [(google.api.field_behavior) = REQUIRED];
  string comment = 4 [(google.api.field_behavior) = REQUIRED];
  string step_id = 5 [(google.api.field_behavior) = REQUIRED];
  string fv_signature = 6 [(google.api.field_behavior) = REQUIRED];
  bool qco_marked = 7 [(google.api.field_behavior) = OPTIONAL];
}
